// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple website content 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "items": Array [
            Object {
              "href": "/docs/foo/bar",
              "label": "Bar",
              "type": "link",
            },
            Object {
              "href": "/docs/foo/baz",
              "label": "baz",
              "type": "link",
            },
          ],
          "label": "foo",
          "type": "category",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "href": "/docs/hello",
          "label": "Hello, World !",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "href": "/docs/hello",
          "label": "Hello, World !",
          "type": "link",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`simple website content 2`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "modules": Object {
      "docsMetadata": "@docusaurus-plugin-content-docs/docs-route-ff2.json",
    },
    "path": "/docs/:route",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/bar.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-foo-bar-cef.json",
        },
        "path": "/docs/foo/bar",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/baz.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-foo-baz-dd9.json",
        },
        "path": "/docs/foo/baz",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/hello.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-hello-da2.json",
        },
        "path": "/docs/hello",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/lorem.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-lorem-17b.json",
        },
        "path": "/docs/lorem",
      },
    ],
  },
]
`;

exports[`versioned website content 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "href": "/docs/next/foo/bar",
          "label": "bar",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "href": "/docs/next/hello",
          "label": "hello",
          "type": "link",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.0/docs": Array [
    Object {
      "items": Array [
        Object {
          "href": "/docs/1.0.0/foo/bar",
          "label": "bar",
          "type": "link",
        },
        Object {
          "href": "/docs/1.0.0/foo/baz",
          "label": "baz",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "href": "/docs/1.0.0/hello",
          "label": "hello",
          "type": "link",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.1/docs": Array [
    Object {
      "items": Array [
        Object {
          "href": "/docs/foo/bar",
          "label": "bar",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "href": "/docs/hello",
          "label": "hello",
          "type": "link",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`versioned website content 2`] = `
Object {
  "1.0.0": Set {
    "version-1.0.0/docs",
  },
  "1.0.1": Set {
    "version-1.0.1/docs",
  },
  "next": Set {
    "docs",
  },
}
`;

exports[`versioned website content 3`] = `
Array [
  Object {
    "component": "@theme/DocPage",
    "modules": Object {
      "docsMetadata": "@docusaurus-plugin-content-docs/docs-next-route-1c8.json",
    },
    "path": "/docs/next/:route",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/foo/bar.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-next-foo-bar-09c.json",
        },
        "path": "/docs/next/foo/bar",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/docs/hello.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-next-hello-64c.json",
        },
        "path": "/docs/next/hello",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "modules": Object {
      "docsMetadata": "@docusaurus-plugin-content-docs/docs-route-ff2.json",
    },
    "path": "/docs/:route",
    "priority": -1,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.1/foo/bar.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-foo-bar-cef.json",
        },
        "path": "/docs/foo/bar",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.1/hello.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-hello-da2.json",
        },
        "path": "/docs/hello",
      },
    ],
  },
  Object {
    "component": "@theme/DocPage",
    "modules": Object {
      "docsMetadata": "@docusaurus-plugin-content-docs/docs-1-0-0-route-660.json",
    },
    "path": "/docs/1.0.0/:route",
    "priority": undefined,
    "routes": Array [
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.0/foo/bar.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-1-0-0-foo-bar-568.json",
        },
        "path": "/docs/1.0.0/foo/bar",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.0/foo/baz.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-1-0-0-foo-baz-5e1.json",
        },
        "path": "/docs/1.0.0/foo/baz",
      },
      Object {
        "component": "@theme/DocItem",
        "exact": true,
        "modules": Object {
          "content": "@site/versioned_docs/version-1.0.0/hello.md",
          "metadata": "@docusaurus-plugin-content-docs/docs-1-0-0-hello-1d0.json",
        },
        "path": "/docs/1.0.0/hello",
      },
    ],
  },
]
`;
